--- a/content/resources/4-601f18-th.md
+++ b/content/resources/4-601f18-th.md
@@ -4,14 +4,13 @@ description: ''
 file: /courses/4-601-introduction-to-art-history-fall-2018/e7664332ac2e48fb38058bd8e62f18d0_4-601f18-th.jpg
 file_size: 4229
 file_type: image/jpeg
-hide_download: true
-hide_download_original: null
 image_metadata:
   caption: "A visitor to Berlin's Gem\xE4ldegalerie looks at an exhibition of paintings\
-    \ from the Renaissance.\_Photo by [Joan Brebo](https://www.flickr.com/photos/joanbrebo/38529061284/)\
-    \ on Flickr. License: CC BY-NC."
-  credit: "Image by [Joan](https://www.flickr.com/photos/joanbrebo/) on Flickr. License\_\
-    [BY-NC](https://creativecommons.org/licenses/by-nc/2.0/)"
+    \ from the Renaissance.\_Photo by {{% resource_link \"18ce1cf7-1211-449c-8c12-94fd74c59aa8\"\
+    \ \"Joan Brebo\" %}} on Flickr. License: CC BY-NC."
+  credit: "Image by {{% resource_link \"a54ba29b-3741-46f2-b0d6-727d0ea01ba7\" \"\
+    Joan\" %}} on Flickr. License\_{{% resource_link \"d499256f-2d0f-43a9-b216-92957e0e3571\"\
+    \ \"BY-NC\" %}}"
   image-alt: A person stands alone in a museum gallery, looking at paintings.
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
