--- a/content/resources/4-601f18.md
+++ b/content/resources/4-601f18.md
@@ -4,14 +4,12 @@ description: ''
 file: /courses/4-601-introduction-to-art-history-fall-2018/0e12552343a6c667bf99846358e5ec50_4-601f18.jpg
 file_size: 18019
 file_type: image/jpeg
-hide_download: true
-hide_download_original: null
 image_metadata:
   caption: "A visitor to Berlin's Gem\xE4ldegalerie looks at an exhibition of paintings\
-    \ from the Renaissance.\_Photo by [Joan Brebo](https://www.flickr.com/photos/joanbrebo/38529061284/)\
-    \ on Flickr. License: CC BY-NC."
-  credit: Image by [Joan Brebo](https://www.flickr.com/photos/joanbrebo/) on Flickr
-    (CC BY-NC).
+    \ from the Renaissance.\_Photo by {{% resource_link \"18ce1cf7-1211-449c-8c12-94fd74c59aa8\"\
+    \ \"Joan Brebo\" %}} on Flickr. License: CC BY-NC."
+  credit: Image by {{% resource_link "a54ba29b-3741-46f2-b0d6-727d0ea01ba7" "Joan
+    Brebo" %}} on Flickr (CC BY-NC).
   image-alt: A person stands alone in a museum gallery, looking at paintings.
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
